--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,25 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+
+.profile {
+  border: 1px solid red;
+  width: 300px;
+  margin: 25px auto;
+  padding:10px;
+  text-align: center;
+}
+
+.profile-img {
+  width: 100px;
+}
+
+.profile-heading {
+  margin: 10px;
+  padding: 10px;
+}
+
+.profile-para {
+  margin: 10px;
+  padding: 10px;
+}
